[package]
name = "g-term"
version = "0.1.0"
authors = ["KAYT33N <K80arabi@gamil.com>"]
edition = "2021"
description = "Create Semi-Graphical UIs in Terminal"
readme = "README.md"
repository = "https://github.com/KAYT33N/vared"
license = "GNU GPLv3"
license-file = "LICENSE.txt"
keywords = ["TUI","UI","CLI","terminal","command-line"]
categories = ["command-line-interface", "config", "development-tools", "gui", "visualization"]

[dependencies]
